public interface Visitable {
    void accept(JDVisitor JDVisitor);
}
