@startuml
!include commons.style

title Justification Diagram Compiler (Structure)
center footer ACE - Corinne Pulgar

package justificationDiagram {

    class JustificationDiagram { }

}

package export {

    interface JDVisitor {
        + visitDiagram(JustificationDiagram)
        + visitNode(Node)
        + visitConclusion(Conclusion)
        + visitSubConclusion(SubConclusion )
        + visitStrategy(Strategy)
        + visitDomain(Domain)
        + visitRationale(Rationale)
        + visitSupport(Support)
        + visitRelation(Relation)
    }

    class GraphDrawer {
        - gv
        + draw()
    }

}

package models {

    interface Visitable {
        + accept(JDVisitor)
    }

    class Node {
        # alias
        # label
    }

    class Conclusion {
        # restriction
    }

    class Relation { }

    GraphDrawer -.up.-|> JDVisitor
    JustificationDiagram -.up.-|> Visitable
    Relation -.up.-|> Visitable
    Relation "*" o-- "1" Node : from
    Relation "*" o-- "1" Node : to
    Node "1" o-- "*" Relation : inputs
    Node "1" o-- "*" Relation : outputs
    Node -.up.-|> Visitable
    Node <|-- Domain
    Node <|-- Conclusion
    Node <|-- Rationale
    Node <|-- Strategy
    Node <|-- SubConclusion
    Node <|-- Support
}

    JustificationDiagram "1" o-- "*" Node : nodes
    JustificationDiagram "1" o-- "*" Relation : relations

@enduml